src/test/deca/syntax/valid/custom/option/java.deca
class TestJava {
    void methodJava() java("  WSTR \"toto\"");
}
{
    TestJava test = new Car();
    test.methodJava();
}