src/test/deca/syntax/invalid/custom/while_noopar.deca


{
while "test"){
    i = 2;
}
}